Fix align of task icon.

--- a/assets/css/dashboard.scss
+++ b/assets/css/dashboard.scss
@@ -202,6 +202,7 @@ html, body {
   cursor: pointer;
   border-radius: 0;
   padding: 8px;
+  border-left: 6px solid #ffffff;
 
   a {
     color: rgb(51, 51, 51);
